--- a/models/db_sueldos.py.1
+++ b/models/db_sueldos.py.1
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 db.define_table("familiares",
     Field("numero_legajo","integer"),
-    Field("cuil","string"),
+    Field("cuil","intbig"),
     Field("dni", "integer",),
     Field("nombre", "string"),
     Field("apellido", "string"),
@@ -16,7 +16,7 @@ db.define_table("familiares",
     Field("codigo_postal","integer"),
     Field("localidad","string"),
     Field("email","string"),
-    Field("telefono","integer"),
+    Field("telefono","string"),
     Field("celular","integer"),
     Field("estudia","string"),
     Field("parentezco","string"),
@@ -27,8 +27,8 @@ db.familiares.parentezco.requires= IS_IN_SET(["conyuge","hijo","familiar"])
 
 
 db.define_table("legajos",
-    Field("cuil","string",unique=True,requires=[IS_EMPTY_OR (IS_CUIT()),IS_EMPTY_OR (IS_NOT_IN_DB(db,"legajos.cuil",error_message="El CUIL del Empleado ya existe")),IS_NOT_EMPTY(error_message="Ingrese el CUIL del empleado")],label="CUIL"),
-    Field("dni","string",),
+    Field("cuil","intbig"),
+    Field("dni","integer",),
     Field("nombre", "string"),
     Field("apellido", "string"),
     Field("fe_nac","date"),
@@ -44,8 +44,8 @@ db.define_table("legajos",
     Field("localidad","string"),
     Field("email","string"),
     Field("fecha_ingreso","date"),
-    Field("celular","string"),
-    Field("telefono","string"),
+    Field("celular","integer"),
+    Field("telefono","integer"),
     Field("estudia","string"),
     Field("horas_extras","integer"),
     Field("obra_social","string"),
